<resources>
    <string name="app_name">Disc Heroes</string>
    <string name="profile1">New Game</string>
    <string name="profile2">New Game</string>
    <string name="delete1">Delete Profile 1</string>
    <string name="delete2">Delete Profile 2</string>
    <string name="largelogo">Disc Heroes Large Logo</string>
    <string name="cptextbox">Create New Profile</string>
    <string name="create">Create</string>
    <string name="yeah">Yeah</string>
    <string name="ask">Are you sure you want to delete this profile?</string>
    <string name="choose">Choose a Chapter</string>
    <string name="mainmenu">Main Menu</string>
    <string name="play">Play</string>
    <string name="chap1">Chapter 1</string>
    <string name="chap2">Chapter 2</string>
    <string name="chap3">Chapter 3</string>
    <string name="chap4">Chapter 4</string>
    <string name="chap5">Chapter 5</string>
    <string name="chap6">Chapter 6</string>
    <string name="chap7">Chapter 7</string>
    <string name="chap8">Chapter 8</string>
    <string name="chap9">Chapter 9</string>
    <string name="chap10">Chapter 10</string>
    <string name="title_activity_gallery_book">galleryBook</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
