<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thedebelopers.discheroes.MainActivity"
    android:background="@drawable/bg_book">

    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/deletebutton2"
        android:layout_x="386dp"
        android:layout_y="245dp"
        android:background="@drawable/delete"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/delete2"
        android:onClick="del2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:text="@string/profile2"
        android:id="@+id/profilebutton2"
        android:layout_x="427dp"
        android:layout_y="244dp"
        android:background="@drawable/button"
        android:allowUndo="false"
        android:onClick="cre2"/>

    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/deletebutton1"
        android:layout_x="386dp"
        android:layout_y="205dp"
        android:background="@drawable/delete"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/delete1"
        android:onClick="del1"/>

    <ImageView
        android:layout_width="283dp"
        android:layout_height="76dp"
        android:id="@+id/logolarge"
        android:layout_x="135dp"
        android:layout_y="37dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/largelogo" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:text="@string/profile1"
        android:id="@+id/profilebutton1"
        android:layout_x="426dp"
        android:layout_y="204dp"
        android:background="@drawable/button"
        android:onClick="cre1"/>

</AbsoluteLayout>
